--- a/css/index.css
+++ b/css/index.css
@@ -34,17 +34,13 @@ body {
     display: inline-block;
 }
 
-.person-name {
-    font-weight: bold;
-}
-
-.person-img {
-    display: block;
-    max-width: 128px;
-    max-height: 128px;
-    margin: 10px auto;
+.list-title {
+    color: #fff;
+    padding: 3px;
+    font-size: 1em;
 }
 
 .highlight {
-    background-color: yellow;
+    background-color: red;
+    color: #ffffff;
 }
